Cambios version v1.0

ADD: loop_refresh() function
ADD: loop_refreshListen function
ADD: property listenClients
ADD: Test Threads
ADD: new httpclient
ADD: new interface http client.
ADD: ThreadSocketMaster, support for MultiThread and Constants

*** ADD: Support for threads BUT IS EXPERIMENTAL CLASS.


--> cambios de versiones anteriores <--

v0.3.1 -> v0.4 : https://github.com/alexander171294/PHPSocketMaster/blob/9b4838cf532e2d9547e78a63b3e83f5293555bc8/CHANGELOG
v0.3 -> v0.3.1 : https://github.com/alexander171294/PHPSocketMaster/blob/610d96123f4845de49dc4db12705f778571089e4/CHANGELOG
v0.2 -> v0.3   : https://github.com/alexander171294/PHPSocketMaster/blob/acc8f0e3a580e0b49a8efae00cf6f2e72b6c02ae/CHANGELOG
v0.1 -> v0.2   : https://github.com/alexander171294/PHPSocketMaster/blob/5217190a15d0f3be92c69697dad91846d2e8257e/CHANGELOG